--- a/pages/p4/954923.md
+++ b/pages/p4/954923.md
@@ -1,4 +1,4 @@
-### 人民币狂涨5000点 央行下调外汇风险准备金率为0(图)
+### 信仰者眼中：大选、公正、真相(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="人民币 央行 外汇 风险准备金率" src="https://img2.secretchina.com/pic/2018/10-7/p2278201a653362455-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="大选" src="https://img3.secretchina.com/pic/2020/12-6/p2832697a46085885-ss.jpg" style="height:450px; width:600px"/>
   <br>
-   人民币近期持续升值，央行宣布将外汇风险准备金率从20%下调为0。（图片来源：Adobe Stock）
+   12月5日，乔治亚州川普“捍卫参议院多数”集会现场（图片来源：看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,68 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月12日讯】（看中国记者丁晓雨综合报导）9月份以来，
+  【看中国2020年12月7日讯】“
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/人民币" target="_blank">
-    人民币
+   <span href="https://www.secretchina.com/news/gb/tag/大选" target="_blank">
+    大选
    </span>
   </strong>
-  持续疯狂升值，10月9日假期过后第一天，更创下一日内拉升1000点的记录。5个月来，人民币累计升值已超5000点。为稳汇率，日前，中国
+  ”，狭义上是指现在如火如荼的美国总统四年一度的选举，而广义上则又是每个人面对
   <strong>
-   央行
+   真相
   </strong>
-  宣布将远期售汇业务的
+  ，按照自己的价值观所作的人生乃至灵魂未来之永远的一次最大的选择。以利益得失作为价值观的人，往往选择投靠强者，站在最有机会获胜的一方，因为个人利益的得失优先于道德之得失。而以道德善恶作为价值观的人，往往优先选择正义、
   <strong>
-   外汇风险准备金率
+   公正
   </strong>
-  从20%下调为0。
+  的一方，因为个人利益居于次要位置。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《第一财经》10月11日报导，10月10日，中国
-  <span href="https://www.secretchina.com/news/gb/tag/央行" target="_blank">
-   央行
+  这个群里大多是有神信仰者，那么对于信仰者而言，“大选”又有着广义之上的更高内涵，那就是在人类面临乱象迷中之
+  <span href="https://www.secretchina.com/news/gb/tag/真相" target="_blank">
+   真相
   </span>
-  发布消息称，今年以来，人民币汇率以市场供求为基础双向浮动，弹性增强，市场预期平稳，跨境资本流动有序，外汇市场运行保持稳定，市场供求平衡。为此，中国人民银行决定自2020年10月12日起，将远期售汇业务的外汇风险准备金率从20%下调为0。
+  时，每个人所作的大是大非、大善大恶、大正大邪的灵魂之大选择，以及在大审判时，根据每个人选择时所表现出来的良心大小与神性高低，所作出的“公正”判决：从天堂到地狱、从永恒荣耀到无尽的罪与罚以致毁灭的灵魂归属。今天，我们的良心选择，或许已经在大审判的天庭之下，正在呈堂供证。
  </p>
  <p>
-  这是继2018年4月
-  <span href="https://zh.wikipedia.org/wiki/中国人民银行" target="_blank">
-   央行
+  所谓“
+  <span href="https://www.secretchina.com/news/gb/tag/公正" target="_blank">
+   公正
   </span>
-  将远期售汇业务的外汇风险准备金率从0上调到20%后，再次恢复至0。
+  ”，是因为每个人都获得了面对真相的机会，都给予了面对真相为自己灵魂的位置与未来归属进行公平“大选”的机会。
  </p>
  <p>
-  2015年“8.11”之后，为抑制
-  <span href="https://zh.wikipedia.org/wiki/外汇" target="_blank">
-   外汇
-  </span>
-  市场过度波动，央行将银行远期售汇业务纳入宏观审慎政策框架，对开展代客远期售汇业务的金融机构收取外汇风险准备金。
+  所以，对于今天已经得知大选真相并根据自己的信仰做出了选择的信仰者而言，我们首先考虑的似乎不应是向那些已经知道真相但为了个人安危、利益得失而故意作恶、或是非善恶不分、或不得已向邪恶屈服的法官、政客和下流媒体们，去争辩、去说服其改变立场。因为即使说服了他们，他们的改变却不是基于正义与善良，而是基于对利益、对现实、对形势等更周全、更逻辑的算计，这都无法改变其良心的品质及其灵魂最终审判的结果。
  </p>
  <p>
-  远期售汇业务是银行对企业提供的一种汇率避险衍生产品。企业通过远期购汇能在一定程度上规避未来汇率风险，但由于企业并不立刻购汇，而银行相应需要在即期市场购入
-  <span href="https://www.secretchina.com/news/gb/tag/外汇" target="_blank">
-   外汇
-  </span>
-  ，这会影响即期汇率，进而又会影响企业的远期购汇行为。这种顺周期行为易演变成“羊群效应”。
+  我们目前考虑的更应该是如何传播真相，让更多人类同胞在谎言与乱象中，获得真相，看到希望，为自己灵魂的未来归属获得公正“大选”的机会。
  </p>
  <p>
-  自今年5月中旬以来，
-  <span href="https://zh.wikipedia.org/zh-hans/人民币" target="_blank">
-   人民币
-  </span>
-  涨势凌厉，目前涨幅已逾6%。仅今年第三季度，在岸人民币升幅就达3.8％，是2008年初以来的最大季度涨幅，同期离岸人民币涨幅逾4％。
+  目前，还有无数只阅读或观看主流媒体（主要下流媒体）的民主党人，以及其它国家的几十亿人，并不知道大选真相而依然被误导，支持着邪恶、支持着舞弊者。然而，他们中绝大多数人，如果知道了真相，将不会再去认同舞弊行为，再去支持舞弊者。正如赵晓先生推文中所提到的，美国民主党人里至少还有⅔的人不是无神论者，至今还有55%的人是基督徒，其中包括许许多多在点票站稀里糊涂或者半推半就的被人引导，参与舞弊，助纣为虐的人。这么多不明真相而良心尚存之人，如果一旦知道了真相，必然会做出基于道义良心的选择，要么站出来反对舞弊、要么站出来洗清自己，揭露舞弊。只有这样，将来在灵魂判决的“公正”面前，他们才会无怨无悔。而在向他们传播真相中曾经竭尽努力的我们，才能在将来的“公正”面前，问心无愧。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -97,7 +85,7 @@
   </div>
  </center>
  <p>
-  十一假期后，人民币强势升破6.7，创2019年4月以来新高。
+  让我们振作吧！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -112,7 +100,7 @@
   </div>
  </center>
  <p>
-  《证券时报》报导称，汇率升值虽然能够起到降低进口成本、稳定跨境资本流动和提振资本市场等作用，但升值速度过快也会在一定程度伤害出口部门，并对经济复苏产生一定的负面影响。
+  越在黑暗之中，
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +115,7 @@
   </div>
  </center>
  <p>
-  对近期人民币为何会疯狂升值，业界主要有两种观点：
+  我们内心的光明才更耀眼。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,7 +130,7 @@
   </div>
  </center>
  <p>
-  一种是认为经济复苏，资产价格具备吸引力，吸引外资逐步入场，长期持有。 另一种是认为因热钱进场，使得人民币升值，给出口业造成更进一步打击，待出现问题后，热钱赚钱撤退，留下一地鸡毛。
+  越是恶者得暴利、善者无利可图之时，
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -161,7 +149,7 @@
   </ins>
  </center>
  <p>
-  有业内人士分析，尽管目前市场上大部分都持有第一种观点，较为乐观，经济复苏有望。但目前地缘局势紧张，充满未知，资本选择长期看好的可能性不大，反而撤离的风险更大，人民币在这种情况下疯狂升值，才是需要防范的。浙江志晟投资管理总经理龙头力哥认为，目前第二种可能性较大，即热钱进场使得人民币升值，这符合资本的特性。他表示，在遇到某种金融现象时，不应盲目乐观。
+  我们坚守的善良，才更真实、更可贵。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -176,7 +164,7 @@
   </div>
  </center>
  <p>
-  央行显然也已经意识到了这种危机，中信证券FICC首席分析师明明分析说，下调远期售汇业务风险准备金，说明央行不追求人民币趋势升值。
+  再过些天，人间将白昼最短，黑夜最长，
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +179,7 @@
   </div>
  </center>
  <p>
-  招商证券首席宏观分析师谢亚轩表示，近期人民币汇率的快速上升有一些脱离基本面的成分，有情绪化的成分。央行这个时候肯定是希望市场发挥自身的调节作用。
+  然而那一夜，正是圣诞之夜。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,6 +193,7 @@
    </center>
   </div>
  </center>
+ (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -223,7 +212,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -255,13 +244,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948920.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948920.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948920.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/12/948920.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954923.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954923.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954923.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/954923.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948920.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954923.md' width='0px' height='0px'/>
