--- a/pages/p5/954921.md
+++ b/pages/p5/954921.md
@@ -1,4 +1,4 @@
-### 胡锡进谈任志强案出狂语 微博禁评 民间炮轰(图)
+### 升高施压弃用华为 美国防法案纳入5G规定(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="任志强 胡锡进" src="https://img3.secretchina.com/pic/2020/10-12/p2795001a517765832-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="华为 美国 5G 国防" src="https://img3.secretchina.com/pic/2020/9-14/p2775612a299442409-ss.jpg"/>
   <br>
-   胡锡进谈任志强案再次引发争议。（图片来源：微博截图）
+   施压应弃用华为，美国防法案纳入5G规定。（Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,56 +21,64 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月12日讯】（看中国记者黎小葵综合报导）中国前华远集团董事长、知名红二代
+  【看中国2020年12月6日讯】媒体报导，
   <strong>
-   任志强
+   美国
   </strong>
-  疑因批评中共当局遭重判18年，日前官媒介绍案情时指，任志强涉案金额超过2亿人民币；《环时》总编辑
+  国会今年度的
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/胡锡进" target="_blank">
-    胡锡进
+   国防
+  </strong>
+  授权法案（NDAA）最终版本涵盖
+  <strong>
+   5G
+  </strong>
+  规则，以向
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
+    华为
    </span>
   </strong>
-  更语出惊人，强调其玩
-  <strong>
-   政治
-  </strong>
-  屁股一定要干净。
+  和中兴通讯、及使用其5G设备的盟友升高施压，要求美国国防部重新考虑是否向使用中国5G通讯技术的国家派遣军队或给予军事装备。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  胡锡进12日在个人微博发文称，“
-  <span href="https://www.secretchina.com/news/gb/tag/任志强" target="_blank">
-   任志强
+  据《自由时报》引述香港《南华早报》报导，NDAA规定新设一位国防部高阶助理部长职位，负责“工业基础政策”，以监督供应链。
+  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+   美国
   </span>
-  从事政治对抗，摆出一份道德优越感，那么就需要自己有能够支援这种对抗的真实的道德操守。然而他的屁股底下显然不干净，自己做一把手的国企与自己的儿子发生关联交易，凭直觉就是不合规的，存在构成经济犯罪的巨大风险。”
+  防部主管采购与保障的次长罗德11月表示，5G技术有微电子产品稳定供应，对五角大厦来说至关重要。
  </p>
  <p>
-  他还强调，玩
-  <span href="https://www.secretchina.com/news/gb/tag/政治" target="_blank">
-   政治
+  NDAA规定，当美国防部对海外部署做决定时，必须考虑有风险
+  <span href="https://www.secretchina.com/news/gb/tag/5G" target="_blank">
+   5G
   </span>
-  对抗的人屁股底下一定要干净。 “当然，也有的政治对抗者明知道自己屁股底下不干净，但就是豁出来了，宁肯承受法律的制裁，那是他们的主动选择，老胡没什么可说的。总之，从北京日报报导的案情来看，任志强出事是注定的，他不出事才是怪事。”
+  供应商对其人员、装备和军事行动造成的危险，并点名华为、中兴属于这类供应商。该规定将适用于任何主要武器系统，或额外永久派遣的军队部署、至少一个营规模，但不适用于短期作战任务。
  </p>
  <p>
-  值得注意的是，与以往不同的是，这条微博设置了禁止评论。
+  兰德公司分析师金洙（音译）表示，此规定将使部分美国盟友如韩国必须做出决定，“对首尔来说，问题归结到安全和经济的权衡，这在当今时代对生存有重大影响”；即使美国未打算近期向韩国转移军事装备，若首尔决定把华为设备纳入其5G网络，北京当局监控或侵入敏感通讯的能力也存在风险。
  </p>
  <p>
-  不过，仍有许多网友透过其它社交平台表达想法，网友纷纷表示，“胡这家伙的嘴巴好脏。”“意思就是，自己屁股擦干净就能政治对抗了吗？”“明明是莫须有，从抓捕到审判，哪一个敢公开？微博上除了胡狗，谁能谈任志强三个字。”“中国共产党限制你人身自由什么时候需要法律了？胡主编是在装外宾吗？”
+  NDAA要求，美
+  <span href="https://www.secretchina.com/news/gb/tag/国防" target="_blank">
+   国防
+  </span>
+  部须考量其驻军国家正在采取哪些措施，以减轻中国5G技术造成的风险。欧亚集团资深分析师韦恩（Ali Wyne）表示，该法案效力可能取决于美国愿意在多大程度上，推动现在抱持模糊态度的伙伴和盟友弃用华为设备。
  </p>
  <p>
-  也有网友吐槽说，“你跟他讲法律，他跟你讲道德，你跟他讲道德，他跟你耍流氓。”“胡编的嘴跟屁股没什么区别了。​​”“别禁评啊，自己唱戏感动自己。”“胡锡进就像是一个加速主义战士。”
+  韦恩表示，问题在于，美国将要求这些国家采取哪些风险“减轻”的措施？这些国家愿意采取哪些措施？较宽松解释，“减轻”风险可能只意味对华为、中兴获准建造的网络元件实施一些限制，但“最严格解释，可能意味对其完全封杀”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -85,11 +93,11 @@
   </div>
  </center>
  <p>
-  任志强以敢言闻名，多次以犀利语言预测中国房地产走势和政策，并公开批评中共当局，有着“任大炮”之称。今年2月，中国网络流传一篇标题&lt;任志强：人民的生命被病毒和体制的重病共同伤害&gt;的文章，批评北京当局隐匿
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
+  报导称，美国国家情报总监（DNI）雷克里夫12月3日罕见在《华尔街日报》撰文指出，北京政府构成当今对美国最大威胁的原因之一就是华为，“我亲自告诉美国盟友，使用这类
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  疫情。
+  技术，将严重限制美国可和他们分享至关重要情报的能力”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,7 +112,7 @@
   </div>
  </center>
  <p>
-  之后的9月22日他被以犯贪污罪、受贿罪、挪用公款罪及国有公司人员滥用职权罪，被北京市第二中级法院判处有期徒刑18年。北京市委机关报《北京日报》指提及此案时称，任志强在长达10多年的时间里，利用职务便利涉案总金额超过2.2亿元人民币。
+  美国政府和国会存在共识，华为、中兴通讯等中企通讯设备存在“后门”程序风险，可被北京当局用以拦截敏感信息、从事间谍活动、监控、甚至中断基础设施。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -119,7 +127,7 @@
   </div>
  </center>
  <p>
-  现年69岁的任志强不仅是中国国企地产商人，也是一位中共党员。历任北京市华远地产董事长、华远集团党委副书记兼董事长、北京市商业银行（北京银行前身）监事、新华保险董事、北京市政协委员。持有中国人民大学法律硕士学位。其父任泉生曾任中国商业部副部长。
+  美国联邦通讯委员会（FCC）已认定华为、中兴对美国国安造成威胁，其制造的电信设备存在被北京用于间谍活动的风险，排定10日会议将考虑列出禁用设备名单、表决相关监管规定，将禁止使用联邦补贴资金来采购中企设备，并协助乡村小型电信运营商从剔除及汰换其网络设备。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,7 +159,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -183,13 +191,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949021.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949021.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949021.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/12/949021.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954921.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954921.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954921.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/06/954921.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949021.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954921.md' width='0px' height='0px'/>
