--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 真相不会永远沉默 正义终究要来临(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="沉默的真相" src="https://img3.secretchina.com/pic/2020/10-5/p2789151a487827005-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   电视剧《沉默的真相》（图片来源：视频截图）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,74 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月5日讯】花了整天的时间，终于把
   <strong>
-   电视剧
-  </strong>
-  《
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/沉默的真相" target="_blank">
-    沉默的真相
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  》看完。说心里话，感觉不错。
+  是先人
+  <strong>
+   智慧
+  </strong>
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  首先，选题的尺度挺大，涉及到对未成年人的性侵害，尤其是幕后的官商勾结。真的，竟然通过相关审查，着实不易。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  在剧情方面的设计也相当精彩。开始，律师张超携带着自己的学生，曾经的检察官江阳的尸体，拒绝安检，准备强行通过地铁。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  按照正常的逻辑分析，凶手真的是愚蠢到顶，这样做等同于自投罗网。被警方制服后，张超承认犯罪事实。意想不到的，法庭上他却突然翻供，案件愈发的扑朔迷离。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  不得已，警方成立了专案组，以破大案要案著称的严良加入。经过认真的调查，已经死亡多年的支教老师侯贵平进入了大伙的视野。他是整个案件的关键点。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  顺着这条线索追查下去，案情终于真相大白。江阳死于精心设计的自杀，但律师张超，原刑侦副队长朱伟，法医陈明章共同协助，目的就是要引起舆论的关注。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  作为支教老师，年轻的侯贵平满腔热血，他热爱教育，关心学生。他发现有人对女学生进行性侵害后，义无反顾的进行举报，要为学生讨说法。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他的举报不但屡屡泄密，本人还经常受到利诱和威胁，最终落入案犯的圈套导致死亡。面对种种不合理的现象，当地公安局给出的答案是，强奸妇女，畏罪跳水自杀。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,7 +96,9 @@
   </div>
  </center>
  <p>
-  侯贵平的女友李静不相信，始终抱着为侯贵平伸冤的想法。他特意找到江阳，希望得到他的帮助，江阳答应下来。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +113,9 @@
   </div>
  </center>
  <p>
-  想重新翻案，困难相当的大。由于时间久远，很难有强有力的新证据出现，江阳想到了放弃。关键时刻，法医陈明章推荐了刑侦副队长朱伟，他对当年的案情也持有怀疑态度。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +130,9 @@
   </div>
  </center>
  <p>
-  江阳和朱伟组合后，从当年“被强奸”的丁春妹入手调查，丁春妹说出了陷害侯贵平的事实。蹊跷的是，不久，丁春妹失踪，家里头只留下血迹。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +147,9 @@
   </div>
  </center>
  <p>
-  朱伟因为发现案件牵扯到当地知名企业卡恩集团，在手续不全的情况下对董事长孙传福进行拘捕。他的举动让犯罪团伙中的李建国（刑警大队长）深感不安，利用职权让朱伟到警校进修。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,7 +164,31 @@
   </div>
  </center>
  <p>
-  朱伟离开后，江阳的调查更陷入困境。无奈，他选择了结婚成家，法医陈明章也辞职创业。意外的是，监狱有名犯人为减轻罪责举报，有个叫王海军的曾经杀害个妇女并抛尸，应该是失踪的丁春妹。
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +207,9 @@
   </ins>
  </center>
  <p>
-  得知这个消息，警校回来的朱伟和江阳再度联手。没想到，这次的阻力更大，王海军不明不白死在刑讯室，江阳家里发现大量现金被公诉受贿送进监狱，案件再次回归原点。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +224,9 @@
   </div>
  </center>
  <p>
-  出狱后，江阳患上了肺癌，且到了晚期。回想多年的辛苦付出，他内心更加苦楚，为了能顺利推动侯贵平案的调查，他和朱伟，陈明章，李静，张超，张晓倩（当年被性侵的女学生）演绎了开头的谋杀抛尸案，目的是想引来高规格调查组，彻底打掉黑恶势力。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -212,7 +241,9 @@
   </div>
  </center>
  <p>
-  故事的结局不消多谈，但观看后的压抑和悲壮感特别强烈。案犯全部得到应有的惩罚，但陈明章，朱伟，张超等也因不同的罪名进了牢房，江阳更是以死明志，这个代价太大了。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -227,7 +258,9 @@
   </div>
  </center>
  <p>
-  江阳，原本能成为检察长的乘龙快婿，为了案件，他选择放弃，朱伟，原本也能有更高的职位，为了厘清真相，他也奋不顾身。法医陈明章，同样默默地记录着真相。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -242,11 +275,9 @@
   </div>
  </center>
  <p>
-  他们貌不惊人的举动，看上去是在尽本职工作，更伟大之处则是在传递人间
-  <span href="https://www.secretchina.com/news/gb/tag/正义" target="_blank">
-   正义
-  </span>
-  ，维护法律尊严。正是他们的存在，恶行终究会得到严厉的打击，人民的生活才能得到保障。
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,7 +291,6 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -279,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -311,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948208.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948208.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948208.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/05/948208.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948208.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
