--- a/pages/p4/954924.md
+++ b/pages/p4/954924.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 不要低估中共专制统治的野蛮无耻(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="香港" src="https://img3.secretchina.com/pic/2020/12-7/p2832951a677532102-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   12月3日，黎智英被港警拘捕（图片来源：ANTHONY WALLACE/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,44 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月7日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   <span href="https://www.secretchina.com/news/gb/tag/许智峰" target="_blank">
+    许智峰
    </span>
   </strong>
-  是先人
-  <strong>
-   智慧
-  </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  选择流亡，人已到了英国，事先虽然及时安排了家人一起离开，可惜没有处理好个人财产的转移，据说他的数百万私人财产已经被政府冻结。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  这是很可惜的事，可能走得太匆忙，来不及处理，也可能他对
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
+    中共
+   </span>
+  </strong>
+  的野蛮和无耻估计不足。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  在国安法之下，林郑政府已经没有什么不能做的事。对许智峰在眼皮底下顺利出关流亡他国，更顺利安排家人一起同行，林郑政府一定捶胸口悔之不及，甚至会被中联办的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
+    香港
+   </span>
+  </strong>
+  党委书记申斥办事不力。面对这样的挫折，林郑当然要想尽一切办法来对许智峰作出惩罚，那许智峰来不及转移的资产便成为他们的囊中物。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  专制政权的野蛮，是干什么坏事都不需要讲法理，是不需要顾及最起码的人情物理，顾及起码的为人的良知，是多无耻的事都可干得出来。香港人对此，应该有充份的心理准备。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  笔者认为，目前中共对美国等西方国家，已到了黔驴技穷的地步了，对付外人已基本上没什么招数。拜登能不能上台还不知道，但拜登与他身后的民主党历届总统，已先后对美国强硬的对华政策表态，中共对中美关系已经不再抱什么幻想了。
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
+  中共深知与西方的关系没有最坏，只有更坏，基于这样的基本判断，中共不会再顾及西方对中共国内政策的反应，也就是说，不管西方怎么骂，中共都会严控香港，会选择西方最痛的地方去下手。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +81,11 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  因此，香港人对中共的对港政策，不要再抱任何不切实际的幻想。有的人可能认为，台面上那么多人，中共要处理都需要一段时间，几时才轮得到我？有的人认为，香港毕竟是开放社会，干坏事全世界看着，中共总不能像管大陆人那样来管我们；有的人会认为，
+  <span href="https://www.secretchina.com/news/gb/tag/反送中" target="_blank">
+   反送中
+  </span>
+  运动都沉寂下来了，以后大规模抗争不会有，大家就隐忍过下去，只要社会平静下来，中共还想保住香港，获得经济利益，他们总不会把事情做得太绝。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +100,7 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  这些想法都太幼稚，没有从历史中接受教训。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +115,11 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  中共从草莽中起家，中共的骨干就是
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  农村中大量的流氓无产者，中共遵崇的不是西方文明社会的观念，是中国千年农民起义打家劫舍的野蛮行径和苏俄无产阶级残酷专政的邪恶之集大成来行事的。中共是彻底的实用主义者，什么情况下什么办法有用，就用什么办法，这些办法没有所谓的文明规范，没有良知约束，没有道德底线，就只有利与害的权衡。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +134,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  只要中共认为有必要，再恶毒再没有人性的事他们都干得出来，不要以我们正常人的心态去猜度中共，也不要把我们的底线视为中共的底线。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,9 +149,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+  笔者强烈建议，所有有条件离开的人，不论自己是否有危险，不论是不是目标人物，都先选择离开。因为你根本不知道，中共什么时候会发癫，会突然限制出入境，突然限制私人财产的转移，会突然剥夺原本我们视为常理的个人权利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,14 +164,7 @@
   </div>
  </center>
  <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  离开当然会有一定困难，要克服生活上和财务上的很多不便，要承受一定的牺牲，但没有困难会大过在中共的专制统治下生活，没有损失会大过我们的自由和人身权利被剥夺。离开后还可以回来，不离开就可能永远没机会离开，这是最大的问题。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +183,11 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  1949年国民党逃离大陆，
+  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
+   蒋介石
+  </span>
+  政府备好飞机，请胡适等知识精英去动员钱钟书、陈寅恪等大学者离开大陆，他们因为一时的犹豫，放弃了最后离开大陆的机会。无数这样的大学者因此在数十年里受尽羞辱迫害，郁郁而终，而那些及时逃离大陆的学者，大都得到善终，个人价值得到实现。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +202,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  现在英国、加拿大、美国，甚至台湾，都提供不同程度的方便，吸纳香港年轻人和专业人士，只要主动去争取，做好承担困难的心理准备，尽早作出安排，就在可能的条件下尽早离开。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +217,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  至于没有条件离开的，此后请大家好好保全自己，不要作无畏牺牲，不要自动送头，就是隐忍下来，活下去，记住这里发生的一切，等待一个东山再起的契机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,9 +232,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+  每天看着自己熟悉的人被折磨，被迫害，内心痛苦难以形容。但世事有时不以我们的意志为转移，只有面对现实，尽可能把自己活好，保存实力，应对未来的挑战。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,9 +247,11 @@
   </div>
  </center>
  <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  （文章授权转载自香港中文大学
+  <span href="https://www.facebook.com/nganshunkau/" target="_blank">
+   facebook颜纯钩作者专页
+  </span>
+  ）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -291,6 +265,7 @@
    </center>
   </div>
  </center>
+ (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -341,13 +316,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954924.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954924.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954924.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/954924.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/954924.md' width='0px' height='0px'/>
