同步于: 12月7日2时52分

--- a/pages/soh6/450913.md
+++ b/pages/soh6/450913.md
@@ -1,4 +1,4 @@
-### 【选情更新12/6】川普集会次日 乔治亚议会推动选举调查
+### 【选情更新12/6】美大法官将宾州案例回应期限提前
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -19,10 +19,32 @@
   <span class="meta">
    【希望之声2020年12月6日】（本台记者凌杉综合报导）
   </span>
-  美国总统川普与第一夫人梅拉尼娅周六（12月5日）赶赴乔治亚州大型集会，为两名共和党参议员助选，集会期间，川普对民众展示了作为证据的富尔顿县计票中心监控视频。在川普集会结束后次日，乔治亚州的议员再度推进了质疑选举结果的做法。
+  美国总统川普与第一夫人梅拉尼娅周六（12月5日）赶赴乔治亚州大型集会，为两名共和党参议员助选，集会期间，川普对民众展示了作为证据的富尔顿县计票中心监控视频。在川普团队举行集会之际，乔治亚州的议员再度推进了质疑选举结果的做法。而川普团队在推进美国高院案例方面也有新进展。
  </p>
  <p>
   以下是希望之声整合的北美时间12月6日（周日）选举新闻更新：
+ </p>
+ <h2>
+  大法官阿利托将宾州案例响应期限提前
+ </h2>
+ <p>
+  大法官阿利托周日宣布，高院将川普团队在宾州紧急诉讼的响应截止日期提前，从原本的下星期三（12月9日）下午4点提前至星期二（12月8日）上午9点。
+ </p>
+ <p>
+  相关案例寻求在美国最高法院上诉，诉讼内容涉及宾州选举中的邮寄投票流程违反州宪法。
+ </p>
+ <h2>
+  川普团队进入密歇根州审查Dominion选举系统
+ </h2>
+ <p>
+  周日，川普团队高级法律顾问、宪法专家珍娜·埃利斯（Jenna Ellis）告诉福克斯新闻，川普团队在周日早上8点半其进入密歇根州安特里姆县（Antrim County）审查22台Dominion计票机，调查时间约为8小时，结果预计在48小时之后公开。
+ </p>
+ <p>
+  在上周五（12月4日），密歇根州法官宣布，授权川普团队人员对密歇根州22台Dominion设施进行审查。川普私人律师
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  表示，这是诚实选举的“巨大胜利”。
  </p>
  <h2>
   乔治亚州参议员发布调查选举舞弊请愿书
@@ -38,6 +60,26 @@
  </p>
  <p>
   对此，前联邦上诉官鲍威尔称赞说，“乔治亚州取得新进展！发起请愿书以进行彻底调查。”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h2>
+  大律师林·伍德筹备乔治亚州高院上诉
+ </h2>
+ <p>
+  川普阵营大律师林·伍德周日（12月6日）表示，第11巡回法庭的小组驳回了他关于乔治亚州的上诉，这令他可以筹备于最高法院发起相关诉讼。
+ </p>
+ <p>
+  “我的案子为司法系统提供了一个机会，可以明确指出，由于州务卿在未经州议会批准的情况下对缺席投票程序进行了实质性变更，这导致乔治亚大选是非法的”，林·伍德表示，“我正在准备向最高法院提交申请。”
+ </p>
+ <p>
+  该案是由林·伍德以选民身份提交发起，林·伍德在推文中指出，选举舞弊的行为导致正式选票被非法稀释，选民被剥夺了平等保护的权利。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
