--- a/pages/nf4514/n12599095.md
+++ b/pages/nf4514/n12599095.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.6】鲍威尔收到大包被切碎选票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/LIN_5752-600x400.jpg"/>
+<div><img alt="【大选更新12.6】3州议会拟重定选举人" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/2011220134531528-600x400.jpg"/>
 <div class="caption">
- 图为2020年12月2日，美国乔治亚州阿尔法雷塔市（Alpharetta），鲍威尔律师在新闻发布会上发表讲话。（林乐予/大纪元）
+ 图为2020年11月21日，乔治亚州亚特兰大，民众聚集在州议会外，抗议选举舞弊，要求停止偷窃。(Megan Varner/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
