--- a/pages/prog202/a103003734.md
+++ b/pages/prog202/a103003734.md
@@ -1,4 +1,4 @@
-### 【全球新闻】11月4日完整版
+### 【环球直击】12月6日完整版（2）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,41 +7,23 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年11月05日讯】【全球新闻】11月4日完整版
- </p>
- <p>
-  <strong>
-   提要
-  </strong>
-  <br/>
-  美大选选情胶着
+  【新唐人北京时间2020年12月07日讯】
   <ok href="https://www.ntdtv.com/gb/川普.htm">
    川普
   </ok>
-  团队要求
-  <ok href="https://www.ntdtv.com/gb/重新计票.htm">
-   重新计票
+  乔州为参议员助选：永不放弃; 瞄准中共官员！美国务院再颁
+  <ok href="https://www.ntdtv.com/gb/签证限制.htm">
+   签证限制
   </ok>
-  <br/>
-  <ok href="https://www.ntdtv.com/gb/川普.htm">
-   川普
+  终止5交流; 前中将麦金纳尼：
+  <ok href="https://www.ntdtv.com/gb/大选舞弊.htm">
+   大选舞弊
   </ok>
-  指大选存在舞弊 将诉诸
-  <ok href="https://www.ntdtv.com/gb/最高法院.htm">
-   最高法院
+  是叛国 总统须五动作平乱; 疫情一年 各国
+  <ok href="https://www.ntdtv.com/gb/圣诞.htm">
+   圣诞
   </ok>
-  <br/>
-  大赚变亏蚀
-  <ok href="https://www.ntdtv.com/gb/蚂蚁股民.htm">
-   蚂蚁股民
-  </ok>
-  要求退款止息
-  <br/>
-  集汽车和飞机于一身
-  <ok href="https://www.ntdtv.com/gb/飞行汽车.htm">
-   飞行汽车
-  </ok>
-  荷兰上路
+  彩灯展传统依然
  </p>
  <div class="single_ad">
  </div>
@@ -49,13 +31,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102979405.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102979405.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102979405.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/05/a102979405.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103003734.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103003734.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103003734.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/12/06/a103003734.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102979405.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103003734.md' width='0px' height='0px'/>
