--- a/pages/soh6/450913.md
+++ b/pages/soh6/450913.md
@@ -70,7 +70,7 @@
   </div>
  </div>
  <h2>
-  大律师林·伍德筹备乔治亚州高院上诉
+  大律师林·伍德就乔治亚州案件筹备联邦高院上诉
  </h2>
  <p>
   川普阵营大律师林·伍德周日（12月6日）表示，第11巡回法庭的小组驳回了他关于乔治亚州的上诉，这令他可以筹备于最高法院发起相关诉讼。
