--- a/pages/nf4514/n12599095.md
+++ b/pages/nf4514/n12599095.md
@@ -1,13 +1,13 @@
-### 【大选更新12.6】3州议会拟重定选举人
+### 【大选更新12.6】鲍威尔收到大包被切碎选票
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新12.6】3州议会拟重定选举人" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/2011220134531528-600x400.jpg"/>
+<div><img alt="【大选更新12.6】朱利安尼中共病毒检测呈阳性" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/zhu.jpg"/>
 <div class="caption">
- 图为2020年11月21日，乔治亚州亚特兰大，民众聚集在州议会外，抗议选举舞弊，要求停止偷窃。(Megan Varner/Getty Images)
+ 图为朱利安尼在11月7日于费城召开的新闻发布会上。(BRYAN R. SMITH/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -58,21 +58,6 @@
  </ok>
  情况的实时更新：
 </h4>
-<h3>
- 朱利安尼：3州议会可望改变选举人
-</h3>
-<p>
- 美国总统川普的律师鲁迪·朱利安尼（Rudy Giuliani）周日表示，三个州的立法机构可能会重选选举人，并很可能将选举问题提交给美国最高法院。
-</p>
-<p>
- 朱利安尼在接受福克斯新闻采访时表示，他认为乔治亚州、密歇根州和亚利桑那州的州议会已经做好了对选举人进行投票的准备，其中乔治亚州已经开始请愿举行会议。
-</p>
-<p>
- “他们是现在第一个这样做的立法机构。这是建国元勋根据宪法赋予立法机构所需扮演的角色。他们是那些应该选择总统的人，而不是州长，不是选举委员会。他们才是那些有宪法义务决定选举人的人。”朱利安尼说。
-</p>
-<p>
- “密歇根州也在考虑同样的事情，”朱利安尼说：“他们虽然还没有走到这一步，但他们现在正在起草一些东西，亚利桑那州也是如此，所以这三个（州）……很可能最终会由立法机构决定谁是选举人。”
-</p>
 <h3>
  大法官提前宾州邮寄选票案的文件递交截止日
 </h3>
@@ -717,6 +702,8 @@
  <p>
   责任编辑：李玲
  </p>
+ <div id="gtx-trans" style="position: absolute; left: 134px; top: 1324.05px;">
+ </div>
 </p></div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
