--- a/pages/nf4514/n12599095.md
+++ b/pages/nf4514/n12599095.md
@@ -1,4 +1,4 @@
-### 【大选更新12.6】鲍威尔收到大包被切碎选票
+### 【大选更新12.6】朱利安尼中共病毒检测呈阳性
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -58,6 +58,47 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 朱利安尼中共病毒检测呈阳性
+</h3>
+<p>
+ 一直在领导美国总统川普（特朗普）竞选活动打法律战的大律师鲁迪·朱利安尼（Rudy Giuliani），其中共病毒（武汉肺炎）检测呈阳性反应。
+</p>
+<p>
+ 川普周日在推特上宣布了这一消息，他写到：“@RudyGiuliani，是迄今为止纽约市历史上最伟大的市长，他一直在不懈地努力揭露美国历史上最腐败的选举（到目前为止！），他的中国（中共）病毒检测呈阳性。祝鲁迪早日康复，我们会继续努力战斗！！！”
+</p>
+<blockquote class="twitter-tweet" data-width="550">
+ <p dir="ltr" lang="en">
+  .
+  <ok href="https://twitter.com/RudyGiuliani?ref_src=twsrc%5Etfw">
+   @RudyGiuliani
+  </ok>
+  , by far the greatest mayor in the history of NYC, and who has been working tirelessly exposing the most corrupt election (by far!) in the history of the USA, has tested positive for the China Virus. Get better soon Rudy, we will carry on!!!
+ </p>
+ <p>
+  — Donald J. Trump (@realDonaldTrump)
+  <ok href="https://twitter.com/realDonaldTrump/status/1335679426516881409?ref_src=twsrc%5Etfw">
+   December 6, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
+ 朱利安尼：3州议会可望改变选举人
+</h3>
+<p>
+ 川普私人律师鲁迪·朱利安尼（Rudy Giuliani）周日表示，三个州的立法机构可能会重选选举人，并很可能将选举问题提交给美国最高法院。
+</p>
+<p>
+ 朱利安尼在接受福克斯新闻采访时表示，他认为乔治亚州、密歇根州和亚利桑那州的州议会已经做好了对选举人进行投票的准备，其中乔治亚州已经开始请愿举行会议。
+</p>
+<p>
+ “他们是现在第一个这样做的立法机构。这是建国元勋根据宪法赋予立法机构所需扮演的角色。他们是那些应该选择总统的人，而不是州长，不是选举委员会。他们才是那些有宪法义务决定选举人的人。”朱利安尼说。
+</p>
+<p>
+ “密歇根州也在考虑同样的事情，”朱利安尼说：“他们虽然还没有走到这一步，但他们现在正在起草一些东西，亚利桑那州也是如此，所以这三个（州）……很可能最终会由立法机构决定谁是选举人。”
+</p>
 <h3>
  大法官提前宾州邮寄选票案的文件递交截止日
 </h3>
@@ -702,7 +743,7 @@
  <p>
   责任编辑：李玲
  </p>
- <div id="gtx-trans" style="position: absolute; left: 134px; top: 1324.05px;">
+ <div id="gtx-trans" style="position: absolute; left: -22px; top: 589.06px;">
  </div>
 </p></div>
 <hr/>
