--- a/pages/soh6/450913.md
+++ b/pages/soh6/450913.md
@@ -70,6 +70,48 @@
   </div>
  </div>
  <h2>
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  确诊冠状病毒
+ </h2>
+ <p>
+  周日，川普私人律师
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  传出确诊冠状病毒（中共病毒）的消息，美国总统川普宣布了该消息，并对他表示慰问。
+ </p>
+ <p>
+  “
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  是迄今为止纽约市历史上最伟大的市长，他一直不懈地揭露美国历史上最腐败的选举（到目前为止最腐败的！），对中（共）国病毒的检测为阳性。很快就好起来，鲁迪，我们将继续前进！！！”，川普在推特中说。
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
+ <p>
+  <ok href="/term/15066">
+   朱利安尼
+  </ok>
+  转发了川普的该条推文，并对另一位支持者的慰问回复说，“谢谢你！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h2>
   大律师林·伍德就乔治亚州案件筹备联邦高院上诉
  </h2>
  <p>
